--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
     "core-js": "^2.5.4",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.9.1"
   },
